--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/alpha-clash.js"></script>
+    <script src="js/utility.js"></script>
   </body>
 </html>
