--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Typing Game</title>
   </head>
   <body>
     <main>
@@ -16,7 +16,10 @@
           <p class="text-center">
             Unleash Your Keyboard Kung Fu : Press “Enter” to Play
           </p>
-          <button onclick="play()" class="btn btn-primary w-[80px] h-[243px] place-self-center">
+          <button
+            onclick="play()"
+            class="btn btn-primary w-[80px] h-[243px] place-self-center"
+          >
             Play Now
           </button>
         </div>
@@ -35,7 +38,7 @@
             </div>
             <div class="flex justify-center h-full items-center">
               <span
-                class="text-8xl text-center font-bold text-black justify-center py-[100px]"
+                class="text-8xl text-center font-bold text-black justify-center py-[100px]" id="rndmAlphabet" onclick="showRandomLetter()"
                 >Y</span
               >
             </div>
@@ -81,16 +84,16 @@
         </div>
 
         <!-- Game Over -->
-        <div class="flex justify-center items-center h-full py-[10%] hidden"><div class="card w-96 bg-base-100 shadow-xl text-white">
-          <div class="card-body">
-            <h2 class="card-title"><span>Score 14</span></h2>
-            <button class="btn btn-primary">Play Again</button>
-            <p>Practice will make you Pro</p>
-            <div class="card-actions justify-end">
-              
+        <div class="flex justify-center items-center h-full py-[10%] hidden">
+          <div class="card w-96 bg-base-100 shadow-xl text-white">
+            <div class="card-body">
+              <h2 class="card-title"><span>Score 14</span></h2>
+              <button class="btn btn-primary">Play Again</button>
+              <p>Practice will make you Pro</p>
+              <div class="card-actions justify-end"></div>
             </div>
           </div>
-        </div></div>
+        </div>
       </div>
     </main>
     <link
