added keyup event

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="flex justify-center h-full items-center">
               <span
-                class="text-8xl text-center font-bold text-black justify-center py-[100px]" id="rndmAlphabet" onclick="showRandomLetter()"
+                class="text-8xl text-center font-bold text-black justify-center py-[100px]" id="rndmAlphabet"
                 >Y</span
               >
             </div>
