added main functions

--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
             </div>
             <div class="flex justify-center h-full items-center">
               <span
-                class="text-8xl text-center font-bold text-black justify-center py-[100px]" id="rndmAlphabet"
+                class="text-8xl text-center font-bold text-black justify-center py-[100px] uppercase" id="rndmAlphabet"
                 >Y</span
               >
             </div>
           </div>
           <div class="py-4">
             <div class="flex justify-center gap-1 my-1 w-full">
-              <kbd class="kbd"><span id="q">q</span></kbd>
-              <kbd class="kbd"><span id="w">w</span></kbd>
-              <kbd class="kbd"><span id="e">e</span></kbd>
-              <kbd class="kbd"><span id="r">r</span></kbd>
-              <kbd class="kbd"><span id="t">t</span></kbd>
-              <kbd class="kbd"><span id="y">y</span></kbd>
-              <kbd class="kbd"><span id="u">u</span></kbd>
-              <kbd class="kbd"><span id="i">i</span></kbd>
-              <kbd class="kbd"><span id="o">o</span></kbd>
-              <kbd class="kbd bg-orange-700"><span id="p">p</span></kbd>
+              <kbd id="q" class="bg-slate-700 rounded-md p-4">q</kbd>
+              <kbd id="w" class="bg-slate-700 rounded-md p-4">w</kbd>
+              <kbd id="e" class="bg-slate-700 rounded-md p-4">e</kbd>
+              <kbd id="r" class="bg-slate-700 rounded-md p-4">r</kbd>
+              <kbd id="t" class="bg-slate-700 rounded-md p-4">t</kbd>
+              <kbd id="y" class="bg-slate-700 rounded-md p-4">y</kbd>
+              <kbd id="u" class="bg-slate-700 rounded-md p-4">u</kbd>
+              <kbd id="i" class="bg-slate-700 rounded-md p-4">i</kbd>
+              <kbd id="o" class="bg-slate-700 rounded-md p-4">o</kbd>
+              <kbd id="p" class="bg-slate-700 rounded-md p-4">p</kbd>
             </div>
             <div class="flex justify-center gap-1 my-1 w-full">
-              <kbd class="kbd"><span id="a">a</span></kbd>
-              <kbd class="kbd"><span id="s">s</span></kbd>
-              <kbd class="kbd"><span id="d">d</span></kbd>
-              <kbd class="kbd"><span id="f">f</span></kbd>
-              <kbd class="kbd"><span id="g">g</span></kbd>
-              <kbd class="kbd"><span id="h">h</span></kbd>
-              <kbd class="kbd"><span id="j">j</span></kbd>
-              <kbd class="kbd"><span id="k">k</span></kbd>
-              <kbd class="kbd"><span id="l">l</span></kbd>
+              <kbd id="a" class="bg-slate-700 rounded-md p-4">a</kbd>
+              <kbd id="s" class="bg-slate-700 rounded-md p-4">s</kbd>
+              <kbd id="d" class="bg-slate-700 rounded-md p-4">d</kbd>
+              <kbd id="f" class="bg-slate-700 rounded-md p-4">f</kbd>
+              <kbd id="g" class="bg-slate-700 rounded-md p-4">g</kbd>
+              <kbd id="h" class="bg-slate-700 rounded-md p-4">h</kbd>
+              <kbd id="j" class="bg-slate-700 rounded-md p-4">j</kbd>
+              <kbd id="k" class="bg-slate-700 rounded-md p-4">k</kbd>
+              <kbd id="l" class="bg-slate-700 rounded-md p-4">l</kbd>
             </div>
             <div class="flex justify-center gap-1 my-1 w-full">
-              <kbd class="kbd"><span id="z">z</span></kbd>
-              <kbd class="kbd"><span id="x">x</span></kbd>
-              <kbd class="kbd"><span id="c">c</span></kbd>
-              <kbd class="kbd"><span id="v">v</span></kbd>
-              <kbd class="kbd"><span id="b">b</span></kbd>
-              <kbd class="kbd"><span id="n">n</span></kbd>
-              <kbd class="kbd"><span id="m">m</span></kbd>
+              <kbd id="z" class="bg-slate-700 rounded-md p-4">z</kbd>
+              <kbd id="x" class="bg-slate-700 rounded-md p-4">x</kbd>
+              <kbd id="c" class="bg-slate-700 rounded-md p-4">c</kbd>
+              <kbd id="v" class="bg-slate-700 rounded-md p-4">v</kbd>
+              <kbd id="b" class="bg-slate-700 rounded-md p-4">b</kbd>
+              <kbd id="n" class="bg-slate-700 rounded-md p-4">n</kbd>
+              <kbd id="m" class="bg-slate-700 rounded-md p-4">m</kbd>
             </div>
           </div>
           <div class="flex justify-between px-12 py-[-16px]">
